--- a/contacto.html
+++ b/contacto.html
@@ -41,9 +41,10 @@
                     <div class="col-xl-9 mx-auto">
                         <div class="cta-inner bg-faded text-center rounded">
                             <h2 class="section-heading mb-5">
-                                <span class="section-heading-upper">NOMBRE COMPLETO ESTUDIANTE</span>
-                                <span class="section-heading-lower">FOTOGRAFIA</span>
-                                <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="https://maps.app.goo.gl/27DfVopK1zNA5hZU7">whatsapp</a></div>
+                                <span class="section-heading-upper">Estudiante </span>
+                                <span class="section-heading-lower">Marco Yovani Mollo Gutierrez</span>
+                                <img class="img-fluid rounded mb-5" src="assets/img/el sillar 2.jpg" alt="..." />
+                                <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="http://wa.me/59164365785">whatsapp</a></div>
                             </h2>
  
                         </div>
