--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
                                 
                                 <span class="section-heading-lower">DEDICATORIA</span>
                             </h2>
-                            <p class="mb-0">Dedico la pagina web a______________________________________________</p>
+                            <p class="mb-0">Este proyecto se lo dedico, antes que nada, a mi familia, que siempre ha estado conmigo en cada paso que doy, apoyándome, motivándome y dándome fuerzas incluso cuando yo ya quiero rendirme.
+También quiero agradecer a quienes han creído en mí y me han enseñado que, con esfuerzo, todo se puede lograr.
+Dedico este trabajo también a mis amistades, que estuvieron a mi lado en los buenos y malos momentos, que me escucharon quejarme, me ayudaron a mejorar y me motivaron a seguir adelante. Sin su compañía y sus consejos, esto no hubiera sido lo mismo.
+</p>
                         </div>
                     </div>
                 </div>
